openshift/ar4k_template.yaml
apiVersion: template.openshift.io/v1
kind: Template
message: A new Ar4k application has been created in your project.
metadata:
  annotations:
    description: Edge Agent Ar4k by Rossonet. For more information about
      using this template, see https://app.rossonet.net/.
    iconClass: icon-spring-boot
    openshift.io/display-name: Edge Agent Ar4k
    openshift.io/provider-display-name: Rossonet s.c.a r.l.
    samples.operator.openshift.io/version: 4.7.0-0.okd-2021-08-22-163618
    tags: java,ar4k,edge,agent,rossonet
    template.openshift.io/documentation-url: https://www.rossonet.net/dati/edge-docs/doc-site/
    template.openshift.io/long-description: This template defines a Edge Agent
    template.openshift.io/support-url: https://www.rossonet.net/
    version: 1.0.0
  creationTimestamp: "2021-10-12T00:00:00Z"
  labels:
    samples.operator.openshift.io/managed: "true"
    template: edge-agent-ar4k
    xpaas: 1.0.0
  managedFields:
  - apiVersion: template.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:message: {}
      f:metadata:
        f:annotations:
          .: {}
          f:description: {}
          f:iconClass: {}
          f:openshift.io/display-name: {}
          f:openshift.io/provider-display-name: {}
          f:samples.operator.openshift.io/version: {}
          f:tags: {}
          f:template.openshift.io/documentation-url: {}
          f:template.openshift.io/long-description: {}
          f:template.openshift.io/support-url: {}
          f:version: {}
        f:labels:
          .: {}
          f:samples.operator.openshift.io/managed: {}
          f:template: {}
          f:xpaas: {}
      f:objects: {}
      f:parameters: {}
    manager: cluster-samples-operator
    operation: Update
    time: "2021-10-12T00:00:00Z"
  name: edge-agent-ar4k
  namespace: openshift
  resourceVersion: "25000"
  uid: d79018ad-14b8-4faa-ace7-1b3b0d76f5a2
objects:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The application's http port.
    labels:
      application: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    ports:
    - port: 9005
      targetPort: 9005
    selector:
      deploymentConfig: ${APPLICATION_NAME}
- apiVersion: v1
  id: ${APPLICATION_NAME}-http
  kind: Route
  metadata:
    annotations:
      description: Route for application's http service.
    labels:
      application: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    host: ${HOSTNAME_HTTP}
    to:
      name: ${APPLICATION_NAME}
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      application: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    labels:
      application: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: ${APPLICATION_NAME}:latest
    source:
      git:
        ref: ${SOURCE_REPOSITORY_REF}
        uri: ${SOURCE_REPOSITORY_URL}
      type: Git
    strategy:
      dockerStrategy:
        dockerfilePath: ${DOCKERFILE}
      type: Docker
    triggers:
    - github:
        secret: ${GITHUB_WEBHOOK_SECRET}
      type: GitHub
    - generic:
        secret: ${GENERIC_WEBHOOK_SECRET}
      type: Generic
    - imageChange: {}
      type: ImageChange
    - type: ConfigChange
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      application: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    replicas: 1
    selector:
      deploymentConfig: ${APPLICATION_NAME}
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          application: ${APPLICATION_NAME}
          deploymentConfig: ${APPLICATION_NAME}
        name: ${APPLICATION_NAME}
      spec:
        containers:
        - env:
          - name: SPRING_SHELL_INTERACTIVE_ENABLED
            value: "false"
          - name: AR4K_CONSOLEONLY
            value: "false"
          - name: AR4K_CONFPATH
            value: /tmp/rossonet
          - name: AR4K_FILEKEYSTORE
            value: /tmp/rossonet/ks.cfg
          - name: LOGGING_FILE
            value: /tmp/rossonet/run.log
          - name: AR4K_WEBREGISTRATIONENDPOINT
            value: ${AR4K_WEBREGISTRATIONENDPOINT}
          - name: AR4K_WEBCONFIG
            value: ${AR4K_WEBCONFIG}
          - name: AR4K_DNSCONFIG
            value: ${AR4K_DNSCONFIG}
          - name: AR4K_BASECONFIG
            value: ${AR4K_BASECONFIG}
          - name: AR4K_WEBKEYSTORE
            value: ${AR4K_WEBKEYSTORE}
          - name: AR4K_DNSKEYSTORE
            value: ${AR4K_DNSKEYSTORE}
          - name: AR4K_KEYSTOREMAINALIAS
            value: ${AR4K_KEYSTOREMAINALIAS}
          - name: AR4K_KEYSTOREPASSWORD
            value: ${AR4K_KEYSTOREPASSWORD}
          - name: AR4K_ADMINPASSWORD
            value: ${AR4K_ADMINPASSWORD}
          image: ${APPLICATION_NAME}
          imagePullPolicy: Always
          name: ${APPLICATION_NAME}
          ports:
          - containerPort: 9005
            name: http
            protocol: TCP
          readinessProbe:
            initialDelaySeconds: 5
            tcpSocket:
              port: 9005
        terminationGracePeriodSeconds: 75
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - ${APPLICATION_NAME}
        from:
          kind: ImageStreamTag
          name: ${APPLICATION_NAME}:latest
      type: ImageChange
    - type: ConfigChange
parameters:
- description: The name for the application.
  displayName: Application Name
  name: APPLICATION_NAME
  required: true
  value: edge-agent-rossonet
- description: The Dockerfile to use
  displayName: Dockerfile path
  name: DOCKERFILE
  required: true
  value: Dockerfile
- description: Git source URI for application
  displayName: Git Repository URL
  name: SOURCE_REPOSITORY_URL
  required: true
  value: https://github.com/rossonet/TemplateEdgeAgentAr4k.git
- description: Git branch/tag reference
  displayName: Git Reference
  name: SOURCE_REPOSITORY_REF
  value: master
- description: 'Custom hostname for http service route.  Leave blank for default hostname,
    e.g.: <application-name>-<project>.<default-domain-suffix>'
  displayName: Custom http Route Hostname
  name: HOSTNAME_HTTP
- description: GitHub trigger secret
  displayName: Github Webhook Secret
  from: '[a-zA-Z0-9]{8}'
  generate: expression
  name: GITHUB_WEBHOOK_SECRET
  required: true
- description: Generic build trigger secret
  displayName: Generic Webhook Secret
  from: '[a-zA-Z0-9]{8}'
  generate: expression
  name: GENERIC_WEBHOOK_SECRET
  required: true
- description: Remote Beacon server URL
  displayName: Beacon URL
  name: AR4K_WEBREGISTRATIONENDPOINT
  value:
- description: URL to get the config via http/https
  displayName: URL Config
  name: AR4K_WEBCONFIG
  value:
- description: Host to get the config via DNS
  displayName: DNS Config
  name: AR4K_DNSCONFIG
  value: 
- description: Config in Base64 format 
  displayName: BASE64 Config
  name: AR4K_BASECONFIG
  value: 
- description: URL to get the keystore via http/https
  displayName: URL keystore
  name: AR4K_WEBKEYSTORE
  value: 
- description: Host to get the kystore via DNS config
  displayName: DNS keystore
  name: AR4K_DNSKEYSTORE
  value: 
- description: Alias for agent certificate in the keystore
  displayName: Main alias
  name: AR4K_KEYSTOREMAINALIAS
  value: agent
- description: Password for keystore file
  displayName: Keystore password
  name: AR4K_KEYSTOREPASSWORD
  value: password
- description: Password for admin user
  displayName: Admin password
  name: AR4K_ADMINPASSWORD
  value: password
